--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,7 @@
-APP_ID = ""
-API_HASH = ""
-BOT_TOKEN = ""
-DB_URL = "postgresql://username:password@localhost:5432/dbname" #change username, password and dbname
-OWNER_ID = "20516707"
-ADMINS = 20516707 12345
-DB_CHANNELS = "-1001995218840 -10019421412"
+APP_ID = "26580825"
+API_HASH = "7e6d950c9946e388f51d808ea9b2df85"
+BOT_TOKEN = "7633106524:AAHd8JRAl1GWKPdOCE2W_eSoe5N9rMm923g"
+DB_URL = "mongodb+srv://Railway:vinitkumarspp4@book.n7plv.mongodb.net/?retryWrites=true&w=majority&appName=book" #change username, password and dbname
+OWNER_ID = "5915871770"
+ADMINS = 5915871770
+DB_CHANNELS = "-1002485397506"
